fixed navbar misalignment

--- a/internify/src/components/organisms/styles/AuthNavbar.css
+++ b/internify/src/components/organisms/styles/AuthNavbar.css
@@ -1,3 +1,10 @@
+.auth_navbar_container {
+  padding: 0 0.1em;
+  margin-bottom: 15px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  align-items: center;
+}
+
 .auth_navbar_link {
   text-decoration: none;
   color: black;
@@ -31,12 +38,6 @@
 
 .auth_navbar_logo:hover {
   opacity: 0.9;
-}
-
-.auth_navbar_container {
-  padding-top: 10px;
-  margin-bottom: 15px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .auth_navbar_right_items {
